--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,25 @@
 sudo: required
-dist: trusty
+os:
+  - linux
+  - osx
 
 install:
-    # Update to a new version of lintian as the one on trusty is quite old.
-    # This also runs apt-get update.
-    - scripts/update_lintian
-    # Install the test suite manually as there is no package for it on trusty.
-    - ( git clone https://github.com/sstephenson/bats.git && cd bats && ./install.sh ~/.local )
+    - scripts/travis.bash update
+    - scripts/travis.bash dependencies
 
 before_script:
     # The version output of vimpager depends of the tags in the repository so
     # we need to fetch them before running the tests.  Currently all tags are
     # fetched.  TODO: Only fetch the latest tag.
     - git fetch --unshallow --tags
-    # The bats directory is only needed during the manual installation above.
-    # It would be reported by lintian otherwise.
-    - rm -fr bats
 
 
 script:
-    # The target install-deb also installs the sharutils package that contains
-    # uuencode.  Without DEB_BUILD_OPTIONS=nocheck dpkg-buildpackage (which is
-    # run by install-deb) would also run the tests.
-    - sudo make install-deb CLEAN_BUILD_DEPS=0 DEB_BUILD_OPTIONS=nocheck
-    # lintian has to be run after make install-deb as it needs the file that
-    # are created by the makefile.
-    - lintian --profile debian -i --fail-on-warnings -EvIL +pedantic ../vimpager*.changes
+    - scripts/travis.bash install-deb
+    - scripts/travis.bash lint
     - make all
     - make test
+    - make install
+    - test "$(which vimpager)" = /usr/local/bin/vimpager
 
 # vim: sw=4
