--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,32 @@
 language: generic
 sudo: required
 dist: trusty
+os:
+    - linux
+    - osx
 
 install:
-    # Update to a new version of lintian as the one on trusty is quite old.
-    # This also runs apt-get update.
-    - scripts/update_lintian
-    # Install the test suite manually as there is no package for it on trusty.
-    - ( git clone https://github.com/sstephenson/bats.git && cd bats && ./install.sh ~/.local )
+    - |
+        if [[ $TRAVIS_OS_NAME == osx ]]; then
+            brew update
+        else
+            # Update to a new version of lintian as the one on trusty is quite
+            # old.  This also runs apt-get update.
+            scripts/update_lintian
+        fi
+
+    - |
+        if [[ $TRAVIS_OS_NAME == osx ]]; then
+            brew install bats
+        else
+            # Install the test suite manually as there is no package for it on
+            # trusty.
+            git clone https://github.com/sstephenson/bats.git
+            (
+                cd bats
+                ./install.sh ~/.local
+            )
+        fi
 
 before_script:
     # The version output of vimpager depends of the tags in the repository so
@@ -16,17 +35,24 @@ before_script:
     - git fetch --unshallow --tags
     # The bats directory is only needed during the manual installation above.
     # It would be reported by lintian otherwise.
-    - rm -fr bats
+    - if [[ $TRAVIS_OS_NAME == linux ]]; then rm -fr bats; fi
 
 
 script:
     # The target install-deb also installs the sharutils package that contains
     # uuencode.  Without DEB_BUILD_OPTIONS=nocheck dpkg-buildpackage (which is
     # run by install-deb) would also run the tests.
-    - sudo make install-deb CLEAN_BUILD_DEPS=0 DEB_BUILD_OPTIONS=nocheck
+    - |
+        if [[ $TRAVIS_OS_NAME == linux ]]; then
+            sudo make install-deb CLEAN_BUILD_DEPS=0 DEB_BUILD_OPTIONS=nocheck
+        fi
     # lintian has to be run after make install-deb as it needs the file that
     # are created by the makefile.
-    - lintian --profile debian -i --fail-on-warnings -EvIL +pedantic ../vimpager*.changes
+    - |
+        if [[ $TRAVIS_OS_NAME == linux ]]; then
+            lintian --profile debian -i --fail-on-warnings -EvIL +pedantic \
+                ../vimpager*.changes
+        fi
     - make all
     - make test
 
